# notion-finance

./: README.md  cli.py  main.py  pyproject.toml
models/: account.py  credit_card.py  expense.py
repositories/: accounts.py  credit_cards.py  expenses.py
use_cases/: expenses.py
